# c-simd-images

./: CMakeLists.txt
cmake/: CompileFlags.cmake  FetchDependencies.cmake
include/: algorithm.h  context.h  image.h  overlay.h  renderer.h  shader.h  utils.h
src/: algorithm.c  context.c  image.c  main.c  overlay.c  renderer.c  shader.c
